--- a/clients/Dashboard.html
+++ b/clients/Dashboard.html
@@ -3,21 +3,43 @@
 <html>
 <head>
     <link rel="stylesheet" href="dashboard.css">
-    <title>
-
+    <title>Dashboard
     </title>
 </head>
 <body>
-    <section class="header"><h1>This is the header...</h1>
-        <div class="w3-light-grey">
-            <div class="w3-container" style="width:50%">50%</div>
-          </div>
-    </section>
-    <section class="left">
-        <h1>This is left section</h1>
-        <a href="./index.html">Go back to clientwelcome page</a>
-    </section>
-    <section class="right"><h1>This is the right</h1></section>
-    
+     <!-- Sidebar -->
+    <div class="wrapper">
+        <header style="border: 1px solid red; display:flex;">
+            <div class="company-logo" style="border: 1px solid red;"> <img src="WealthManagement-logo/logo.png"/></div>
+            <div class="welcome" style="border: 1px solid red; flex:4;"><h2>Welcome to your Dashboard</h2></div>
+        </header>
+         <!-- Product section -->
+        <section class="product-section" style="border: 3px solid blue; flex: 1; display: flex;;">
+            <!-- Product display -->
+            <section class="products" style="border: 1px solid red; flex: 4; display: flex; flex-direction: column;">
+                <div class="basic-instrument" style="border: 1px solid rgb(187, 0, 255); flex: 1;">Basic Instrument</div>
+                <div class="equity" style="border: 1px solid rgb(217, 255, 0); flex: 1;">Equity</div>
+            </section> 
+             <!-- Sidebar -->
+            <section class="client-profile" style="border: 1px solid red; flex: 1; display: flex; flex-direction: column; gap: 10px;">
+                    <!-- for client sidebar -->
+                    <div class="client side-profile" style="border: 1px solid blue; flex: 1;">
+                            <img src="../images/relational-manager-photo.jfif" alt="rm-image" />
+                        <p class="name" >Olajide, O. O</p>
+                        <p class="title">Client</p>
+                        <button><a href="#">Edit profile</a></button>
+                    </div>
+                    <!-- for client Relationship Manager Sidebar -->
+                    <div class="rm side-profile" style="border: 1px solid blue; flex: 1;">
+                            <img src="../images/relational-manager-photo.jfif" alt="rm-image" />
+                        <p class="name">Roland, O. O</p>
+                        <p class="title">My Relational Manager</p>
+                    </div>
+            </section>
+        </section>
+         <!-- Footer -->
+        <footer style="border: 1px solid green">This is footer</footer>
+      
+    </div>
 </body>
-</html>
+</html> 
