--- a/clients/Login/login.html
+++ b/clients/Login/login.html
@@ -7,29 +7,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Link to login CSS File-->
     <link rel="stylesheet" href="./style.css">
-    <title>Sign up</title>
+    <title>Login</title>
 </head>
 <body>
     <div class="wrapper">
         <section class="Left">
             <div class="title"><h1>Wealth Management</h1></div>
             <form>
-                <h2 id="form-directive">Sign Up</h2>
-                <p id="form-guide">Please fill in this form to create an account.</p>
-                <label for="fname" class="fname"><b>First name</b>:</label>
-                <input type="text" id="fname" name="fname" required><br><br>
-                <label for="lname"><b>Last name:</b></label>
-                <input type="text" id="lname" name="lname" required><br><br>
+                <h2 id="form-directive">Login </h2>
+                <p id="form-guide">Login to WealthManagement.</p>
                 <label for="email"><b>Email:</b></label>
                 <input type="text" placeholder="Enter Email" name="email" required><br><br>
                 <label for="password"><b>Password:</b></label>
                 <input type="text" placeholder="Enter Password" name="password" required><br><br>
-                <label for="password_rpt"><b>Confirm Password:</b></label>
-                <input type="text" placeholder="Confirm Password" name="password" required><br><br>
-                <label><input type="checkbox" checked="checked" name="remember"> Remember</label>
-                <span>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</span>
+                <label><input type="checkbox" checked="checked" name="remember"> Remember</label><br><br>
                 <div class="submit">
-                    <button type="submit" class="signupbtn"><b><a href="../Dashboard.html">Sign Up</a></b></button>
+                    <button type="login" class="loginbtn"><b><a href="../Dashboard.html">Login</a></b></button> <p><a href="../Login/password.html">Forgot Passowrd?</a></p>
                 </div>
             </form>
         </section>
