--- a/rm/index.html
+++ b/rm/index.html
@@ -214,7 +214,9 @@
             </div>
             <!-- content display for all ideas -->
             <div id="ideas" class="tab__content" style="display: none;">
-                <ideas-project></ideas-project>
+                <ideas-pro></ideas-project>
+                <ideas-pro></ideas-pro>
+
             </div>
             <!-- content display for all registered clients -->
             <div id="clients" class="tab__content" style="display: none;">
